frontend/test/should_fail/index_where_non_index_expected.grg
#using "index_where_non_index_expected_model.gm"

function f(var x:int) : int
{
	return(x);
}

rule i {
	if{ f(fooi) > 0; }
	
	modify {
	}
}
